--- a/Job_Portal/Pages/Shared/_Navbar.cshtml
+++ b/Job_Portal/Pages/Shared/_Navbar.cshtml
@@ -10,10 +10,10 @@
     <nav class="navbar">
         <div class="logo">Clone</div>
         <ul class="nav-links">
-            <li><a asp-page="/Index" class="active">Community</a></li>
-            <li><a asp-page="#">Jobs</a></li>
-            <li><a asp-page="#">Companies</a></li>
-            <li><a asp-page="#">Messages</a></li>
+            <li><a asp-page="/Community" class="active">Community</a></li>
+            <li><a asp-page="/Jobs">Jobs</a></li>
+            <li><a asp-page="/Companies">Companies</a></li>
+            <li><a asp-page="/Messages">Messages</a></li>
         </ul>
         <div class="nav-icons">
             <div class="border">
