--- a/Job_Portal/Pages/Shared/_Navbar.cshtml
+++ b/Job_Portal/Pages/Shared/_Navbar.cshtml
@@ -8,7 +8,7 @@
 
 <body>
     <nav class="navbar">
-        <div class="logo">Clone</div>
+        <div class="logo">JP</div>
         <ul class="nav-links">
             <li><a asp-page="/Community" class="active">Community</a></li>
             <li><a asp-page="/Jobs">Jobs</a></li>
@@ -21,7 +21,9 @@
             </div>
 
             <div class="border">
-                <i class="fa-regular fa-user"></i>
+                <a asp-page="/Profile">
+                    <i class="fa-regular fa-user"></i>
+                </a>
             </div>
         </div>
     </nav>
